--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -1,5 +1,5 @@
 {{#with supplimentaryResponse.splash.hits.hits.[0]._source}}
-<div class="splash-image" style="background-image: linear-gradient(to bottom left,rgba(0, 77, 65, 0.29),#00796b),url({{original_image}});position: relative;">
+<div class="splash-image" style="background-image: linear-gradient(to bottom left,rgba(230, 74, 25, 0.29),#BF360C),url({{original_image}});position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <h1 class="post-title">{{#with primaryResponse.hits.hits.[0]._source}}{{sanitize title}}{{/with}}</h1>
