--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -44,7 +44,9 @@
                                 <span class="fa fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                             <span class="mdc-toolbar__title catalog-title">
-                                <img src="assets/images/scvo-logo.png" />
+                                <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
+                                    <img src="assets/images/scvo-logo.png" />
+                                </a>
                             </span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
