--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -239,7 +239,6 @@ footer a:hover {
     }
 }
 
-
 .featured.mdc-card {
     height:20rem;
     background-size: cover;
@@ -248,6 +247,12 @@ footer a:hover {
     .mdc-card__primary, .mdc-card__actions {
         background-color: rgba(0, 0, 0, .6);
         color: white;
+    }
+}
+
+.latest-grid {
+    h2 {
+        font-weight: 600;
     }
 }
 
@@ -364,10 +369,25 @@ footer {
     a {
         color: white;
     }
-    .row {
+    .brand-logo {
+        img {
+            margin-bottom: $spacing-unit;
+        }
+    }
+    .mdc-layout-grid {
+        padding: 0;
         margin-bottom: 0;
         p {
             margin: 0 0 0.8rem;
+        }
+    }
+    .mdc-list {
+        padding: 0;
+        .mdc-list-item {
+            height: 1.5rem;
+            a {
+                text-decoration: none;
+            }
         }
     }
     .footer-copyright {
