--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -92,6 +92,9 @@ footer a {
 footer a:hover {
     color: white;
 }
+footer .mdc-list .mdc-list-item a:hover {
+    text-decoration: underline !important;
+}
 
 .hero {
     display: -webkit-box;
@@ -281,11 +284,12 @@ ul.breadcrumb {
         padding: 0;
     }
     li:before {
-        content: "\2215";
+        content: "\203A";
         margin-right: $spacing-unit/4;
     }
     li:first-child:before {
         content: "" !important;
+        font-weight: 800;
         margin-right: 0 !important;
     }
     li:not(:last-child) {
