--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -9,13 +9,13 @@
 <div class="container-fluid">
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 post-content">
                 {{#with primaryResponse.hits.hits.[0]._source}}
                 <h1 class="post-title">{{title}}</h1>
                 {{{rendered.full}}}
                 {{/with}}
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 post-sidebar">
                 <h3 class="">More by {{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponse.authors_posts.hits.hits}}
