--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -336,6 +336,22 @@ ul.supplimentary-list {
     }
 }
 
+h1,
+h2,
+h3,
+h4 {
+    margin-bottom: $spacing-unit/4;
+}
+p {
+    margin: 0 0 $spacing-unit/2;
+}
+p:last-child {
+    margin-bottom: 0;
+}
+.full {
+    margin-bottom: $spacing-unit*1.5;
+}
+
 .blog {
     h1.post-title {
         margin: $spacing-unit/2 0 $spacing-unit;
