--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -12,6 +12,9 @@
     </ul>
     {{/compare}}
     {{/if}}
+    <!-- <div class="pull-right">
+        <a href="https://cms.scvo.net/wp-admin/post.php?post={ {wpid} }&action=edit"><i class="material-icons">mode_edit</i></a>
+    </div> -->
     {{{rendered.full}}}
 </div>
 {{/with}}
