--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -11,6 +11,9 @@
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 post-content">
                 {{#with primaryResponse.hits.hits.[0]._source}}
+                <!-- <div class="pull-right">
+                    <a href="https://cms.scvo.net/wp-admin/post.php?post={ {wpid} }&amp;action=edit"><i class="material-icons">mode_edit</i></a>
+                </div> -->
                 <h1 class="post-title">{{title}}</h1>
                 {{{rendered.full}}}
                 {{/with}}
