--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -117,7 +117,7 @@
                                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-3-tablet">
                                         <ul class="mdc-list">
                                             {{#each menus.footer}}
-                                            <li class="mdc-list-item"><a href="{{path}}">{{label}}</a></li>
+                                            <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
                                             {{/each}}
                                         </ul>
                                     </div>
