--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -5,6 +5,7 @@ $spacing-unit: 1rem;
 
 :root{
     --mdc-theme-primary: #00838F; // Cyan 800
+    --mdc-theme-primary-fade: rgba(0, 131, 143, 0.5);
     --mdc-theme-primary-light: #0097A7; // Cyan 700
     --mdc-theme-primary-dark: #006064; // Cyan 900
     --mdc-theme-secondary: #FF8F00; // Amber 800
@@ -19,27 +20,32 @@ $spacing-unit: 1rem;
 .setting-up-a-charity,
 .running-your-organisation {
     --mdc-theme-primary: #4527A0; // Deep Purple 800
+    --mdc-theme-primary-fade: rgba(69, 39, 160, 0.5);
     --mdc-theme-primary-light: #512DA8; // Deep Purple 700
     --mdc-theme-primary-dark: #311B92; // Deep Purple 900
 }
 .jobs {
     --mdc-theme-primary: #2E7D32; // Green 800
+    --mdc-theme-primary-fade: rgba(46, 125, 50, 0.5);
     --mdc-theme-primary-light: #388E3C; // Green 700
     --mdc-theme-primary-dark: #1B5E20; // Green 900
 }
 .services {
     --mdc-theme-primary: #1565C0; // Blue 800
+    --mdc-theme-primary-fade: rgba(21, 101, 192, 0.5);
     --mdc-theme-primary-light: #1976D2; // Blue 700
     --mdc-theme-primary-dark: #0D47A1; // Blue 900
 }
 .projects-campaigns {
     --mdc-theme-primary: #AD1457; // Pink 800
+    --mdc-theme-primary-fade: rgba(173, 20, 87, 0.5);
     --mdc-theme-primary-light: #C2185B; // Pink 700
     --mdc-theme-primary-dark: #880E4F; // Pink 900
 }
 .blog,
 .policy-research {
     --mdc-theme-primary: #D84315; // Deep Orange 800
+    --mdc-theme-primary-fade: rgba(216, 67, 21, 0.5);
     --mdc-theme-primary-light: #E64A19; // Deep Orange 700
     --mdc-theme-primary-dark: #BF360C; // Deep Orange 900
 }
@@ -238,17 +244,20 @@ footer .mdc-list .mdc-list-item a:hover {
     background-size: cover;
     height: 33.333vh;
     background-position: center center;
-    .mdc-layout-grid {
-        position: relative;
-        height: 25vh;
-        .post-title {
-            position: absolute;
-            margin: 0;
-            bottom: 0;
-            left: $spacing-unit;
-            color: white;
-        }
-    }
+    // .mdc-layout-grid {
+    //     position: relative;
+    //     height: 30vh;
+    //     .post-title {
+    //         position: absolute;
+    //         margin: 0;
+    //         bottom: 0;
+    //         left: 0;
+    //         color: white;
+    //     }
+    // }
+}
+.splash-image-page {
+    // height: 12.5vh;
 }
 
 .featured.mdc-card {
