--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -1,4 +1,12 @@
 {{#with primaryResponse.hits.hits.[0]._source}}
+{{#if featured_image}}
+<div class="splash-image splash-image-page" style="background-image: linear-gradient(to bottom left,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)),url('{{featured_image.sizes.full.source_url}}');position: relative;">
+    <div class="container-fluid">
+        <div class="mdc-layout-grid">
+        </div>
+    </div>
+</div>
+{{/if}}
 <div class="container-fluid">
     {{#if breadcrumb}}
     {{#compare breadcrumb.length '>=' 1}}
