--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -1,4 +1,4 @@
-<!-- <div class="splash-image" style="background-image: linear-gradient(to bottom left,rgba(230, 74, 25, 0.29),#BF360C),url('{ {#with supplimentaryResponse.splash.hits.hits.[0]._source}}{ {original_image}}{ {/with}}');position: relative;">
+<!-- <div class="splash-image splash-image-post" style="background-image: linear-gradient(to bottom left,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)),url('{ {#with supplimentaryResponse.splash.hits.hits.[0]._source}}{ {original_image}}{ {/with}}');position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <h1 class="post-title">{ {#with primaryResponse.hits.hits.[0]._source}}{ {title}}{ {/with}}</h1>
