--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -1,20 +1,16 @@
-<!-- <div class="splash-image splash-image-post" style="background-image: linear-gradient(to bottom left,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)),url('{ {#with supplimentaryResponse.splash.hits.hits.[0]._source}}{ {original_image}}{ {/with}}');position: relative;">
+<div class="splash-image splash-image-post" style="background-image: linear-gradient(to bottom left,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="post-title">{ {#with primaryResponse.hits.hits.[0]._source}}{ {title}}{ {/with}}</h1>
+            <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
         </div>
     </div>
-</div> -->
+</div>
 
 <div class="container-fluid">
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 post-content">
                 {{#with primaryResponse.hits.hits.[0]._source}}
-                <!-- <div class="pull-right">
-                    <a href="https://cms.scvo.net/wp-admin/post.php?post={ {wpid} }&amp;action=edit"><i class="material-icons">mode_edit</i></a>
-                </div> -->
-                <h1 class="post-title">{{title}}</h1>
                 {{{rendered.full}}}
                 {{/with}}
             </div>
