--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -314,8 +314,8 @@ footer .mdc-list .mdc-list-item a:hover {
 ul.breadcrumb {
     list-style: none;
     margin: $spacing-unit/2 0 $spacing-unit*1.5;
-    border-bottom: 1px solid var(--mdc-theme-primary-light);
-    padding-bottom: $spacing-unit;
+    border-bottom: 1px solid var(--mdc-theme-primary-fade);
+    padding: 0 0 $spacing-unit;
     li {
         display: inline-block;
         margin: 0;
