--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image splash-image-page" style="background-image: linear-gradient(to bottom left,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
+<div class="splash-image splash-image-page" style="background-image: linear-gradient(56deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary) 33%, var(--mdc-theme-primary-fade) 100%),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
