More header work

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -180,6 +180,7 @@ footer .mdc-list .mdc-list-item a:hover {
                 height: 64px;
                 margin: 0;
                 .mdc-tab {
+                    color: rgba(255, 255, 255, 0.95);
                     font-size: 1rem;
                     padding: 0 $spacing-unit;
                 }
@@ -213,7 +214,7 @@ footer .mdc-list .mdc-list-item a:hover {
             vertical-align: middle;
         }
         .mdc-toolbar__section.toolbar-menu {
-            background: rgba(0,0,0,0.1);
+            background: rgba(0, 0, 0, 0.15);
             .mdc-tab {
                 min-width: auto;
             }
