--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image splash-image-page" style="background-image: linear-gradient(20deg, var(--mdc-theme-primary-dark) 5%, var(--mdc-theme-primary) 25%, var(--mdc-theme-primary-fade) 100%),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
+<div class="splash-image splash-image-post" style="background-image: linear-gradient(20deg, var(--mdc-theme-primary-dark) 5%, var(--mdc-theme-primary) 25%, var(--mdc-theme-primary-fade) 100%),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
@@ -15,7 +15,7 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 post-sidebar">
-                <h3 class="">More by {{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
+                <h3 class="author">More by {{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponse.authors_posts.hits.hits}}
                     {{{_source.rendered.list}}}
