Minor styling fixes

--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -1,7 +1,7 @@
 <div class="splash-image splash-image-page" style="background-image: linear-gradient(20deg, var(--mdc-theme-primary-dark) 5%, var(--mdc-theme-primary) 25%, var(--mdc-theme-primary-fade) 100%),url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');position: relative;">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
+            <h1 class="page-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
         </div>
     </div>
 </div>
