--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -167,16 +167,16 @@ footer .mdc-list .mdc-list-item a:hover {
                     border-bottom-color: rgba(255,255,255,.5);
                 }
                 ::-webkit-input-placeholder {
-                  color: rgba(255, 255, 255, 0.6);
+                    color: rgba(255, 255, 255, 0.6);
                 }
                 ::-moz-placeholder {
-                  color: rgba(255, 255, 255, 0.6);
+                    color: rgba(255, 255, 255, 0.6);
                 }
                 :-ms-input-placeholder {
-                  color: rgba(255, 255, 255, 0.6);
+                    color: rgba(255, 255, 255, 0.6);
                 }
                 :-moz-placeholder {
-                  color: rgba(255, 255, 255, 0.6);
+                    color: rgba(255, 255, 255, 0.6);
                 }
             }
             .mdc-tab-bar {
@@ -257,11 +257,15 @@ footer .mdc-list .mdc-list-item a:hover {
             position: absolute;
             left: 0;
             bottom: $spacing-unit/2;
+            h1.page-title,
             h1.post-title {
                 margin: 0;
                 color: #fff;
                 font-size: 3rem;
                 font-weight: 400;
+            }
+            h1.post-title {
+                font-size: 2.33rem;
             }
         }
     }
@@ -276,11 +280,6 @@ footer .mdc-list .mdc-list-item a:hover {
     //         color: white;
     //     }
     // }
-}
-.splash-image-post {
-    h1.post-title {
-        font-size: 2.33rem;
-    }
 }
 
 .featured.mdc-card {
@@ -320,7 +319,7 @@ footer .mdc-list .mdc-list-item a:hover {
 
 ul.breadcrumb {
     list-style: none;
-    margin: $spacing-unit/2 0 0;
+    margin: $spacing-unit/2 0 $spacing-unit*1.5;
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
     padding: 0 0 $spacing-unit;
     li {
@@ -343,9 +342,55 @@ ul.breadcrumb {
     }
 }
 .post-info {
-    margin: $spacing-unit/2 0 $spacing-unit*1.5;
+    margin: 0;
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
     padding: 0 0 $spacing-unit;
+    .post-info-item {
+        display: inline;
+        margin-right: 0.5rem;
+    }
+    .post-info-item:last-child {
+        margin-right: 0;
+    }
+    .post-info-author {
+        a:hover {
+            text-decoration: none;
+        }
+        a:hover .underline {
+            text-decoration: underline;
+        }
+        img {
+            width: 24px;
+            border-radius: 50%;
+            vertical-align: text-bottom;
+        }
+    }
+}
+
+blockquote {
+    float: right;
+    width: 33%;
+    background-image: linear-gradient(166deg,var(--mdc-theme-primary-fade) 0%, #fff 80%);
+    border-left: 10px solid var(--mdc-theme-primary-dark);
+    margin: $spacing-unit/4 0 $spacing-unit/4 $spacing-unit/2;
+    padding: $spacing-unit $spacing-unit*(3/4) $spacing-unit/4;
+    font-size: 150%;
+    font-weight: lighter;
+    quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+    color: var(--mdc-theme-primary-dark);
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+blockquote p {
+    display: inline;
+    strong {
+        color: var(--mdc-theme-primary-dark);
+    }
 }
 
 ul.supplimentary-list {
@@ -387,7 +432,7 @@ p:last-child {
     margin-bottom: 0;
 }
 .full {
-    margin: $spacing-unit*1.5 0;
+    margin: $spacing-unit/2 0 $spacing-unit*1.5;
     h1 {
         display: none;
     }
