--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -94,7 +94,9 @@ main {
     overflow: auto;
     padding: $spacing-unit/2;
 }
-
+.mdc-typography--subheading2 {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+}
 .mdc-typography {
     background-color: var(--mdc-site-background, #263238);
     font-family: 'Open Sans', Helvetica, sans-serif;
@@ -198,6 +200,7 @@ footer .mdc-list .mdc-list-item a:hover {
                 }
             }
             .mdc-tab-bar {
+                overflow: hidden;
                 text-transform: none;
                 height: 64px;
                 margin: 0;
@@ -315,6 +318,22 @@ footer .mdc-list .mdc-list-item a:hover {
     }
 }
 
+.credit-union {
+    .mdc-layout-grid {
+        margin-top: $spacing-unit*1.5;
+        .mdc-button {
+            width: 100%;
+            background-color: var(--mdc-theme-primary);
+            color: white;
+            margin-bottom: $spacing-unit;
+        }
+        .mdc-button:hover {
+            background-color: var(--mdc-theme-primary-dark);
+            text-decoration: none;
+        }
+    }
+}
+
 .latest-grid {
     h2 {
         font-weight: 600;
@@ -334,6 +353,14 @@ footer .mdc-list .mdc-list-item a:hover {
     li:not(:last-child) {
         margin-right: 5px;
     }
+}
+
+hr {
+    margin: $spacing-unit 0;
+    height: 1px;
+    background-color: white;
+    border: none;
+    border-bottom: 1px solid var(--mdc-theme-primary-fade);
 }
 
 ul.breadcrumb {
