--- a/functions/test-db/json2/scvo/templates/main-search.hbs
+++ b/functions/test-db/json2/scvo/templates/main-search.hbs
@@ -22,22 +22,22 @@
     {{/each}}
 
     <div class="v-margin">
-        <ul class="pagination">
+        <ul class="pagination inline-list">
             {{#if paging.prevPage}}
                 <li>
-                    <a href="">Previous</a>
+                    <a class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{paging.prevPage}}">Previous</a>
                 </li>
             {{/if}}
             
             {{#each paging.pageRange}}
-                <li class="{{#compare paging.currentPage "===" this}}current-page{{/compare}}">
-                    <a href="">{{this}}</a>
+                <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
+                    <a  class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{this}}">{{this.pageNumber}}</a>
                 </li>
             {{/each}}
 
             {{#if paging.nextPage}}
                 <li>
-                    <a href="">Next</a>
+                    <a class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{paging.nextPage}}">Next</a>
                 </li>
             {{/if}}
         </ul>
