--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -6,8 +6,8 @@
     </div>
 </div>
 
-{{#with primaryResponse.hits.hits.[0]._source}}
 <div class="container-fluid">
+    {{#with primaryResponse.hits.hits.[0]._source}}
     {{#if breadcrumb}}
     {{#compare breadcrumb.length '>=' 1}}
     <ul class="breadcrumb">
@@ -20,6 +20,17 @@
     </ul>
     {{/compare}}
     {{/if}}
-    {{{rendered.full}}}
+    {{/with}}
+    <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content page-content">
+                {{#with primaryResponse.hits.hits.[0]._source}}
+                {{{rendered.full}}}
+                {{/with}}
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
+                <!-- TBC -->
+            </div>
+        </div>
+    </div>
 </div>
-{{/with}}
