--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -9,12 +9,12 @@
 <div class="container-fluid">
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 post-content">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
                 {{#with primaryResponse.hits.hits.[0]._source}}
                 {{{rendered.full}}}
                 {{/with}}
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 post-sidebar">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                 <h3 class="author">More by {{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponse.authors_posts.hits.hits}}
