--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -291,14 +291,14 @@ footer .mdc-list .mdc-list-item a:hover {
             position: absolute;
             left: 0;
             bottom: $spacing-unit/2;
-            h1.page-title,
-            h1.post-title {
+            h1 {
                 margin: 0;
                 color: #fff;
                 font-size: 3rem;
                 font-weight: 400;
                 letter-spacing: -0.08rem;
             }
+            h1.event-title,
             h1.post-title {
                 font-size: 2.33rem;
             }
