--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -42,6 +42,11 @@ $spacing-unit: 1rem;
     --mdc-theme-primary-light: #1976D2; // Blue 700
     --mdc-theme-primary-dark: #0D47A1; // Blue 900
 }
+.services.credit-union {
+    --mdc-theme-primary: #1976D2;
+    --mdc-theme-primary-light: #1976D2;
+    --mdc-theme-primary-dark: #1976D2;
+}
 .project,
 .campaigns,
 .projects-campaigns {
@@ -280,6 +285,7 @@ footer .mdc-list .mdc-list-item a:hover {
 }
 
 .splash-image {
+    position: relative;
     background-size: cover;
     height: 25vh;
     background-position: center center;
@@ -315,6 +321,18 @@ footer .mdc-list .mdc-list-item a:hover {
     //         color: white;
     //     }
     // }
+}
+.splash-image-featured {
+    height: 30vw;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-clip: content-box;
+    background-size: cover;
+    max-width: 1280px;
+    margin: 0 auto;
+    h1 {
+        display: none;
+    }
 }
 
 .featured.mdc-card {
@@ -620,6 +638,6 @@ footer {
         }
     }
     .mdc-toolbar-fixed-adjust {
-        margin-top: 64px;
+        padding-top: 64px;
     }
 }
