Added outline bits for evidence library

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -269,14 +269,20 @@ footer .mdc-list .mdc-list-item a:hover {
     margin: 0;
 }
 .mdc-temporary-drawer {
+    .mdc-temporary-drawer__header-content {
+        padding: $spacing-unit;
+    }
+    .mdc-temporary-drawer__header:before {
+        padding-top: 24%;
+    }
     .mdc-list {
+        .mdc-list-item {
+            padding: 0 $spacing-unit;
+        }
         .mdc-list-item__start-detail {
             display: none;
         }
     }
-}
-.mdc-temporary-drawer__header:before {
-    padding-top: 24%;
 }
 
 .action-buttons-right {
