--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -95,9 +95,18 @@ main {
     padding: $spacing-unit/2;
 }
 
+.mdc-typography,
+.mdc-button,
+.mdc-textfield__input,
+.mdc-card__subtitle,
+.mdc-card__title--large,
+.mdc-card__supporting-text,
+.mdc-list {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+}
+
 .mdc-typography {
     background-color: var(--mdc-site-background, #263238);
-    font-family: 'Open Sans', Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -147,10 +156,6 @@ footer .mdc-list .mdc-list-item a:hover {
     }
 }
 
-.mdc-form-field {
-    font-size: 1rem;
-}
-
 .mdc-toolbar {
     -webkit-transition: background-color 100ms linear;
     -moz-transition: background-color 100ms linear;
@@ -198,13 +203,14 @@ footer .mdc-list .mdc-list-item a:hover {
                 }
             }
             .mdc-tab-bar {
-                text-transform: none;
                 height: 64px;
                 margin: 0;
                 .mdc-tab {
                     color: rgba(255, 255, 255, 0.95);
                     font-size: 1rem;
                     padding: 0 $spacing-unit;
+                    font-variant: all-small-caps;
+                    text-transform: uppercase;
                 }
                 .mdc-tab:after {
                     top: 62px;
@@ -314,6 +320,27 @@ footer .mdc-list .mdc-list-item a:hover {
         color: white;
     }
 }
+.mdc-form-field,
+.mdc-button,
+.mdc-card__supporting-text,
+.mdc-card__subtitle {
+    font-size: 1rem;
+}
+.mdc-card__title--large {
+    font-size: 1.2rem;
+    letter-spacing: normal;
+    line-height: 1.7rem;
+    margin: 0;
+    padding: 0 0 $spacing-unit/2;
+    font-weight: 600 !important;
+}
+.mdc-card__actions .mdc-card__action {
+    font-weight: 800;
+    font-size: 0.9rem;
+}
+.mdc-card__media-item {
+    border-radius: 50%;
+}
 
 .latest-grid {
     h2 {
@@ -333,6 +360,37 @@ footer .mdc-list .mdc-list-item a:hover {
     }
     li:not(:last-child) {
         margin-right: 5px;
+    }
+}
+
+.pagination {
+    padding-top: $spacing-unit/4;
+    li {
+        width: 30px;
+        border-radius: 50%;
+        margin: 0 $spacing-unit/5;
+    }
+    li a {
+        padding: 0;
+        margin: 0;
+    }
+    li:first-child a {
+        padding-left: 0;
+    }
+    li:last-child a {
+        padding-right: 0;
+    }
+    li.active {
+        background-color: var(--mdc-theme-primary);
+        border-radius: 50%;
+    }
+    li:hover,
+    li.active:hover {
+        background-color: var(--mdc-theme-primary-dark);
+        a {
+            color: white;
+            text-decoration: none;
+        }
     }
 }
 
