--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -1,4 +1,18 @@
 <div class="container-fluid">
+    {{#with primaryResponse.hits.hits.[0]._source}}
+    {{#if breadcrumb}}
+    {{#compare breadcrumb.length '>=' 1}}
+    <ul class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        {{#each breadcrumb}}
+        <li>
+            <a href="{{url}}">{{{striptags title}}}</a>
+        </li>
+        {{/each}}
+    </ul>
+    {{/compare}}
+    {{/if}}
+    {{/with}}
     <div class="v-margin">
         <div class="mdc-card">
             <section class="mdc-card__primary">
