--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -7,6 +7,20 @@
 </div>
 
 <div class="container-fluid">
+    {{#with primaryResponse.hits.hits.[0]._source}}
+    {{#if breadcrumb}}
+    {{#compare breadcrumb.length '>=' 1}}
+    <ul class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        {{#each breadcrumb}}
+        <li>
+            <a href="{{url}}">{{{striptags title}}}</a>
+        </li>
+        {{/each}}
+    </ul>
+    {{/compare}}
+    {{/if}}
+    {{/with}}
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content event-content">
