--- a/functions/test-db/json2/scvo/templates/evidence-library-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-search.hbs
@@ -1,4 +1,8 @@
 <div class="container-fluid">
+    <ul class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        <li><a href="/policy-research">Policy &amp; research</a></li>
+    </ul>
     <div class="v-margin">
         <div class="mdc-card">
             <section class="mdc-card__primary">
