--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -321,9 +321,13 @@ footer .mdc-list .mdc-list-item a:hover {
                 font-weight: 400;
                 letter-spacing: -0.08rem;
             }
+            h1.document-tile,
             h1.event-title,
             h1.post-title {
                 font-size: 2.33rem;
+            }
+            h1.document-title {
+                font-size: 2rem;
             }
         }
     }
@@ -446,11 +450,14 @@ ul.breadcrumb {
         content: "\203A";
         font-weight: 800;
         margin-right: $spacing-unit/4;
+        width: $spacing-unit*(3/4);
+        display: inline-block;
     }
     li:first-child:before {
         content: "" !important;
         font-weight: 800;
         margin-right: 0 !important;
+        width: 0 !important;
     }
     li:not(:last-child) {
         margin-right: $spacing-unit/4;
