--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -326,6 +326,7 @@ footer .mdc-list .mdc-list-item a:hover {
             h1.post-title {
                 font-size: 2.33rem;
             }
+            h1.evidence-library-title,
             h1.document-title {
                 font-size: 2rem;
             }
