--- a/functions/test-db/json2/scvo/templates/evidence-library-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-search.hbs
@@ -1,7 +1,7 @@
 <div class="splash-image splash-image-evidence-library" style="background-image: linear-gradient(10deg, var(--mdc-theme-primary-dark) 0%, var(--mdc-theme-primary-fade) 50%, rgba(0,0,0,0.2) 100%),url('{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="evidence-library-title">Evidence Library</h1>
+            <h1 class="page-title">Evidence Library</h1>
         </div>
     </div>
 </div>
