--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -18,7 +18,7 @@
         </li>
         {{/each}}
         <li class="pull-right">
-            <a href="https://cms.scvo.net/wp-admin/post.php?post={{wpid}}&action=edit"><i class="material-icons">border_color</i></a>
+            <a href="https://cms.scvo.org/wp-admin/post.php?post={{wpid}}&action=edit"><i class="material-icons">border_color</i></a>
         </li>
     </ul>
     {{/compare}}
