--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -14,7 +14,7 @@
         <li><a href="/">Home</a></li>
         {{#each breadcrumb}}
         <li>
-            <a href="{{replace url 'https://cms.scvo.net' ''}}">{{{striptags title}}}</a>
+            <a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a>
         </li>
         {{/each}}
         <li class="pull-right">
