--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -14,13 +14,13 @@
     </ul>
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content evidence-library-content">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
+                &nbsp;
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
                 {{#with primaryResponse.hits.hits.[0]._source}}
                 {{{rendered.full}}}
                 {{/with}}
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar evidence-library-sidebar">
-                <!-- TBC -->
             </div>
         </div>
     </div>
