--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -245,6 +245,7 @@ footer .mdc-list .mdc-list-item a:hover {
                     text-transform: uppercase;
                     color: rgba(255, 255, 255, 0.95);
                     font-size: 1rem;
+                    font-weight: 600;
                     padding: 0 $spacing-unit;
                     font-variant: all-small-caps;
                     text-transform: uppercase;
