--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -584,9 +584,14 @@ p:last-child {
     margin-bottom: 0;
 }
 .full {
-    margin: $spacing-unit/2 0 $spacing-unit*1.5;
+    margin: 0 0 $spacing-unit*1.5;
     h1 {
         display: none;
+    }
+    h2:first-child,
+    h2:first-child,
+    h4:first-child {
+        margin-top: 0;
     }
 }
 
