--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -57,7 +57,7 @@ $spacing-unit: 1rem;
 }
 .search-result.scvo-cms-post,
 .search-result.scvo-document,
-.blog,
+.post,
 .policy-research {
     --mdc-theme-primary: #D84315; // Deep Orange 800
     --mdc-theme-primary-fade: rgba(216, 67, 21, 0.5);
@@ -595,7 +595,7 @@ p:last-child {
     }
 }
 
-.blog {
+.post {
     h1.post-title {
         margin: $spacing-unit/2 0 $spacing-unit;
     }
