--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -1,7 +1,7 @@
 <div class="splash-image splash-image-post{{#if primaryResponse.hits.hits.[0]._source.featured_image}} splash-image-featured{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');{{#if primaryResponse.hits.hits.[0]._source.featured_image}} max-height:{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.height}}px;{{/if}}">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.title}}}</h1>
+            <h1 class="post-title">{{{primaryResponse.hits.hits.[0]._source.author_name}}}</h1>
         </div>
     </div>
 </div>
@@ -35,7 +35,10 @@
                 </ul>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
-                <!-- TBC -->
+                <h3 class="author">{{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
+                <div class="author_about">
+                    <!-- TBC -->
+                </div>
             </div>
         </div>
     </div>
