--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -497,6 +497,8 @@ ul.breadcrumb {
     }
 }
 .post-info {
+    font-size: 0.9rem;
+    color: #333;
     .post-info-item {
         display: inline;
         margin-right: 0.5rem;
@@ -512,14 +514,15 @@ ul.breadcrumb {
             text-decoration: underline;
         }
         img {
-            width: 24px;
+            width: 1.6rem;
             border-radius: 50%;
-            vertical-align: text-bottom;
+            margin-right: $spacing-unit/4;
+            vertical-align: bottom;
         }
     }
 }
 .full .post-info {
-    margin: 0 0 $spacing-unit*1.5;
+    margin: $spacing-unit/2 0 $spacing-unit*1.5;
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
     padding: 0 0 $spacing-unit;
 }
@@ -557,12 +560,18 @@ ul.supplimentary-list {
         list-style:none;
         margin: 0;
         padding: 0;
-        span.supplimentary-list-title {
-            font-size: 1.3em;
+        .supplimentary-list-title {
+            font-size: 1.1rem;
+            line-height: 1.4rem;
+            margin-bottom: $spacing-unit/2;
+            display: block;
         }
-        span.supplimentary-list-detail {
-            font-size: 0.9em;
-            color: #555555;
+        .post-info {
+            display: block;
+            margin-bottom: $spacing-unit/4;
+        }
+        .post-info-author {
+            display: none;
         }
     }
     li.supplimentary-list-item:not(:last-child){
@@ -591,7 +600,7 @@ p:last-child {
     h2:first-child,
     h2:first-child,
     h4:first-child {
-        margin-top: 0;
+        margin-top: 0 !important;
     }
 }
 
