--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -332,6 +332,8 @@ footer .mdc-list .mdc-list-item a:hover {
                 font-size: 3rem;
                 font-weight: 400;
                 letter-spacing: -0.08rem;
+                line-height: 3rem;
+                margin-bottom: 0.75rem;
             }
             h1.document-tile,
             h1.event-title,
